# OASist

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  example.oasist_config.json  pyproject.toml  requirements.txt  ruff.toml  test_oasist.py
.github/environments/: release.yml
.github/workflows/: ci.yml  publish-to-pypi-with-token.yml  publish-to-pypi.yml  pylint.yml
OASist/: __init__.py  oasist.py  oasist_client.py
